<resources>
    <string name="app_register">Registrasi</string>
    <string name="app_aktifasi">Aktivasi</string>
    <string name="app_login">Login</string>
    <string name="app_info_notifications">Daftar Notifikasi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="userid">userID</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Keluar</string>
    <string name="oke">OK Simpan</string>
    <string name="lanjut">LANJUT</string>
    <string name="cancel">KEMBALI</string>
    <string name="info">Info Saldo</string>
    <string name="inforek">Info Rekening</string>
    <string name="transfer">Transfer</string>
    <string name="pembelian">Pembelian</string>
    <string name="jenisvoucher">Jenis Voucher</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="administrasi">Administrasi</string>
    <string name="content">Content</string>
    <string name="daftartrf">Daftar Transfer</string>
    <string name="daftartrfab">Daftar Transfer Antar Bank</string>
    <string name="daftarpulsa">Daftar Pulsa</string>
    <string name="daftardonatur">Daftar Donatur</string>
    <string name="daftarplnpra">Daftar PLN Pembelian</string>
    <string name="daftarplnpasca">Daftar PLN Pembayaran</string>
    <string name="daftarPDAM">Daftar PDAM Pembayaran</string>
    <string name="daftarTELKOM">Daftar Telepon Pembayaran</string>
    <string name="contact">Kontak</string>
    <string name="alpanum">Ketik 6 digit</string>
    <string name="passskrg">Password Sekarang</string>
    <string name="passbaru">Password Baru</string>
    <string name="passlagi">Ulangi Password Baru</string>
    <string name="www">www.usid.co.id</string>
    <string name="tentang">&#169;2016 PT. UGT System Integrator Developer\n
    All rights Reserved\n
    Untuk keterangan lebih lanjut, kunjungi www.usid.co.id</string>
    <string name="tv_validasi_pass">Silahkan menentukan Kode Akses Anda:</string>
    <string name="tv_validasi_pass_ulang">Konfirmasi ulang Kode Akses Anda:</string>
    <string name="tv_regis_sn">KODE IMEI :</string>
    <string name="tv_nokartu">No. Telepon : (misal: 081234567890)</string>
    <string name="tv_regis_kartuatm">Masukkan No. Registrasi :</string>
    <string name="tv_transfer_judul">Transfer Antar Rekening</string>
    <string name="tv_transfer_antarbank">Transfer Antar Bank</string>
    <string name="ForwardSMS">Kirim SMS</string>
    <string name="tv_transfer_antarbank2">Rekening Bank Lain</string>
    <string name="tv_trans_dari_rekening">Dari Rekening :</string>
    <string name="tv_trans_ke_rekening">Ke Rekening :</string>
    <string name="tv_trans_tujuan_rekening">Masukkan Rekening Tujuan</string>
    <string name="nominal">Jumlah Nominal :</string>
    <string name="nomi">Nominal</string>
    <string name="cari">Cari :</string>
    <string name="namapln">Nama</string>
    <string name="nama">Masukkan Nama atau Rekening</string>
    <string name="nodata">Tidak ada data tersimpan!</string>
    <string name="masukkan_nominal">Masukkan Jumlah Nominal</string>
    <string name="berita">Berita :</string>
    <string name="kd_bank">Kode Bank</string>
    <string name="simpanrek">Simpan Rekening</string>
    <string name="simpannomor">Simpan Nomor HP</string>
    <string name="simpannpwz">Simpan NPWZ</string>
    <string name="masukkan_berita">Masukkan Isi Berita</string>
    <string name="tv_trans_jumlahuang">Jumlah Uang :</string>
    <string name="tv_trans_rp">Rupiah :</string>
    <string name="hint_kdValidasi">Kode Validasi</string>
    <string name="hint_norek">No. Rekening</string>
    <string name="hint_nokartuatm">No. Registrasi</string>
    <string name="hint_jumlah_uang">Jumlah Uang</string>
    <string name="darirek">Dari Rek.</string>
    <string name="kerek">Ke Rek.</string>
    <string name="bank">Bank</string>
    <string name="kebank">Ke Bank</string>
    <string name="no_rek">No. Rek</string>
    <string name="faktur">Faktur</string>
    <string name="an">A.n</string>
    <string name="jumlah">Jumlah</string>
    <string name="infonama">Nama/Info</string>
    <string name="sn">SN</string>
    <string name="beritaa">Berita</string>
    <string name="infomutasi">Info Mutasi</string>
    <string name="infosimpanan">Info Simpanan</string>
    <string name="mdaberjangka">MDA Berjangka</string>
    <string name="pembiayaan">Pembiayaan</string>
    <string name="transantarrek">Transfer Antar Rekening</string>
    <string name="transantarbmt">Transfer Antar BMT</string>
    <string name="transferbank">Transfer Bank</string>
    <string name="listrik">Listrik PLN</string>
    <string name="pdam">PDAM</string>
    <string name="telepon">Telepon</string>
    <string name="teleponhp">Telepon/HP</string>
    <string name="internet">Internet</string>
    <string name="tvberbayar">TV Berlangganan</string>
    <string name="tiket">Tiket</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="asuransi">BPJS</string>
    <string name="multifinance">Multi Finance</string>
    <string-array name="donasi">
        <item>Donatur Insiden</item>
        <item>Donatur Tetap</item>
    </string-array>
    <string name="kalkulator">Kalkulator Zakat</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="biaya">Informasi Biaya</string>
    <string name="produk">Produk &amp; Promo</string>
    <string name="lokasi">Lokasi Kantor Layanan</string>
    <string name="laz">LAZ-BMT</string>
    <string name="lkaf">LKaf-BMT</string>
    <string name="tokenpln">Token PLN</string>
    <string name="pulsaseluler">Pulsa Seluler</string>
    <string name="gantipass">Ganti Password Login</string>
    <string name="gantipin">Ganti PIN</string>
    <string name="katasandilama">PIN Lama</string>
    <string name="katasandibaru">PIN Baru</string>
    <string name="katasandibaruulang">Ketik Ulang PIN Baru</string>
    <string name="gantiemail">Ganti Email</string>
    <string name="gantibahasa">Ganti Bahasa</string>
    <string name="inbox">Inbox</string>
    <string name="inboxdetail">Inbox Detail</string>
    <string name="about">About</string>
    <string name="callcenter">Call Center</string>
    <string name="lokasikantor">Lokasi Kantor</string>
    <string name="produkpromo">Produk dan Promo</string>
    <string name="biaya2">Biaya-biaya</string>
    <string name="jadwalsolat">Jadwal Sholat</string>
    <string name="hitungzakat">Perhitungan Zakat</string>
    <string name="hikmah">Hikmah</string>
    <string name="trx5">5 Trx</string>
    <string name="trx10">10 Trx</string>
    <string name="trx20">20 Trx</string>
    <string name="btnShare">SHARE</string>
    <string name="btnPDF">Simpan PDF</string>
    <string name="kirim">KIRIM</string>
    <string name="btnFwdSms">Kirim SMS</string>
    <string name="tgl_bayar">Tanggal Bayar</string>
    <string name="hint_uangtunai">Tabungan atau sejenisnya</string>
    <string name="hint_investasi">Saham, Deposito, atau sejenisnya</string>
    <string name="z_uang">Uang Tunai dan Investasi</string>
    <string name="jmluang">Jumlah Uang atau Investasi</string>
    <string name="uangtunai">Uang Tunai</string>
    <string name="investasi">Investasi</string>
    <string name="hint_hutang">Hutang Pribadi</string>
    <string name="pengurangzakat">Pengurang Zakat</string>
    <string name="hutangpendek">Hutang Jangka Pendek</string>
    <string name="kebutuhanpokok">Kebutuhan Pokok dan Riil</string>
    <string name="hargaemas">Harga Emas Saat Ini (per gram)</string>
    <string name="hint_kebutuhanpokok">Kebutuhan Pokok dan lain-lain</string>
    <string name="hint_hargaemas">Harga emas dunia saat ini (gram)</string>
    <string name="cek">Cek Online</string>
    <string name="jenis_donasi">Jenis Donasi :</string>
    <string name="npwz">NPWZ</string>
    <string name="masukkan_npwz">Masukkan NPWZ</string>
    <string name="donasi_tetap">Donasi Tetap</string>
    <string name="pilih_donasi">Pilih Jenis Donasi</string>
    <string name="promo_">Promo</string>
    <string name="produk_">Produk</string>
    <string name="idpel1">ID Pel 1</string>
    <string name="idpel2">ID Pel 2</string>
    <string name="idpel3">ID Pel 3</string>
    <string name="idpel">ID Pelanggan</string>
    <string name="plnpasca">PLN Pascabayar</string>
    <string name="plnpra">PLN Prabayar</string>
    <string name="pulsa">Pulsa Seluler</string>
    <string name="setuju">SETUJU</string>
    <string name="batal">BATAL</string>
    <string name="title_pre_2">B. KETENTUAN REGISTRASI</string>
    <string name="title_pre_3">C. PERSYARATAN INSTALASI</string>
    <string name="text_pre_1">adalah fasilitas layanan transaksi yang dapat diakses secara langsung oleh anggota via smartphone dengan menggunakan media jaringan Internet yang dikombinasikan dengan media SMS (Short Message Services).</string>
    <string name="text_pre_2_7">Anggota dapat melakukan transaksi financial setelah merubah PIN standard.</string>
    <string name="satu">1.</string>
    <string name="dua">2.</string>
    <string name="tiga">3.</string>
    <string name="empat">4.</string>
    <string name="lima">5.</string>
    <string name="enam">6.</string>
    <string name="tujuh">7.</string>
    <string name="text_pre_3_1">Hanya dapat digunakan pada handphone OS berbasis Android.</string>
    <string name="text_pre_3_2">Instalasi di SIM 1 jika SIM Card(Nomor Handphone) nya lebih dari 1.</string>
    <string name="text_pre_3_3">Pastikan memiliki paket data, memory kosong dan pulsa minimal 1000 tersedia untuk proses aktivasi.</string>
    <string name="timer">00:00</string>
    <string name="mohon">Mohon tunggu dalam</string>
    <string name="masukkan">Masukkan Kode Aktivasi</string>
    <string name="kodeverifikasi">Kode verifikasi telah dikirimkan melalui SMS ke</string>
    <string name="aktivasi">AKTIVASI</string>
    <string name="tlp">No. Handphone</string>
    <string name="Home">Beranda</string>
    <string name="Transaction">Transaksi</string>
    <string name="Account">Akun</string>
    <string name="validasi_bawah">Aplikasi Mobile BMT-MS ini digunakan untuk kenyamanan bertransaksi.
        Satu akun tabungan Tidak dapat diaktifkan pada beberapa smartphone.</string>
    <string name="text_pre_2_2">Anggota harus mengisi formulir registrasi Mobile BMT-MS di kantor layanan dengan
        menyerahkan copy kartu identitas.</string>
    <string name="text_pre_2_3">Fasilitas Mobile BMT-MS bisa dilakukan bagi anggota yang memiliki SIM Card Operator
        Selular tertentu dan menginstall aplikasi melalui Google Play Store. </string>
    <string name="text_pre_2_4">Registrasi Mobile BMT-MS dengan cara memasukkan nomor registrasi yang di dapat dari
        customer service kantor layanan BMT Mandiri Sejahtera. </string>
    <string name="text_pre_2_5">PlN standard Mobile BMT-MS didapatkan setelah proses aktivasi berhasil.</string>
    <string name="text_pre_2_6">PIN standard Mobile BMT-MS hanya bisa dilakukan untuk cek saldo dan cek mutasi terakhir.</string>
    <string name="title_pre_1">A. DEFINISI Mobile BMT-MS</string>
    <string name="text_pre_2_1">Setiap anggota yang memiliki rekening tabungan umum syariah berhak untuk menggunakan dan
        memperoleh fasilitas Mobile BMT-MS. </string>
</resources>