<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="Scan" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_nav_transaction"
        android:title="@string/Transaction" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/ic_nav_riwayat"
        android:title="Riwayat" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_nav_user"
        android:title="@string/Account" />

</menu>
