<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_8_"
            android:gravity="center_horizontal"
            android:text="@string/validasi_bawah"
            android:textSize="@dimen/text_16_"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_8_"
            android:gravity="center_horizontal"
            android:text="@string/masukkan"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18_"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_8_"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kodeverifikasi"/>

            <TextView
                android:id="@+id/nohp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tlp"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_8_"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@mipmap/ic_launcher"
            android:padding="@dimen/density_4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_22_"
            android:textStyle="bold"
            app:cursorColor="@android:color/transparent"
            app:cursorWidth="0dp"
            app:itemCount="6"
            app:lineColor="@color/colorPrimary"
            app:lineWidth="1dp"
            app:viewType="line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_8_"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_timera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/density_4"
                android:layout_marginRight="@dimen/density_4"
                android:text="@string/mohon"/>

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/density_4"
                android:layout_marginRight="@dimen/density_4"
                android:text="@string/timer"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_timerb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="detik"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_registrasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_8_"
            android:background="@drawable/custom_button_small"
            android:text="@string/aktivasi"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/density_8_"
            android:gravity="center"
            android:text="@string/error_field_required"
            android:textColor="@color/red"
            android:textSize="@dimen/text_16_"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>